# nvim

./: .gitignore  .gitmodules  .netrwhist  CMakeCache.txt  CMakeLists.txt  CMakeLists2.txt  README.md  init.vim
scenarios/: .project  CMakeLists.txt
scenarios/Mode4/: config_channel.xml  omnetpp.ini
scenarios/Mode4-Validation/: omnetpp.ini
scenarios/Validation/: highway.ned  mcs7_config_channel.xml  mcs7_sidelink_config_20hz.xml  mcs7_sidelink_config_50hz.xml  mcs9_config_channel.xml  omnetpp.ini
scenarios/Validation/0.1vpm/: 01vpm.launchd.xml  01vpm.net.xml  01vpm.rou.xml  01vpm.sumo.cfg
scenarios/Validation/0.2vpm/: 02vpm.launchd.xml  02vpm.rou.xml  02vpm.sumo.cfg
scenarios/Validation/0.3vpm/: 03vpm.rou.xml  03vpm.sumo.cfg
scenarios/Validation/44cbr/: 44cbr.net.xml  44cbr.rou.xml  44cbr.sumo.cfg
scenarios/cars/: config_channel.xml  omnetpp.ini  sidelink_configuration.xml  sidelink_configuration_2.xml  sidelink_configuration_dcc.xml  simulte.rou.xml  simulte.sumo.cfg
scenarios/cars/highway/: highway.launchd.xml  highway.net.xml  highway.sumo.cfg  highway_slow.rou.xml
scenarios/cars/manhattan/: manhattan_grid.net.xml  manhattan_grid.sumocfg  manhattan_rand.rou.alt.xml  manhattan_rand.rou.xml
scenarios/example/: omnetpp.ini
scenarios/manhattan/: config_channel.xml  omnetpp.ini  sensors.xml  services.xml  services2.xml  sidelink_configuration.xml
scenarios/manhattan/calculate/: calculate_aoi2.py  calculate_aoi2_dcc.py  calculate_aoi2_density.py  calculate_aoiColl_dcc.py  calculate_aoiColl_pdf.py  calculate_aoiColl_proposed.py  calculate_aoiCollisionTime.py  calculate_aoiRisk.py  calculate_aoiRiskClass.py  calculate_aoi_dcc.py  calculate_aoi_density.py  calculate_cbr.py  calculate_cbr_dcc.py  calculate_cbr_density.py  calculate_coll_pdf.py  calculate_cpmContained_cdf.py  calculate_cpmContained_pdf.py  calculate_msgSize.py  calculate_pdr.py  calculate_sci.py  calculate_sci_dcc.py  calculate_sci_proposed.py
scenarios/manhattan/myroad/: 3gpp.net.xml  3gpp.poly.xml  3gpp.sumocfg.xml  3gpp1.rou.xml  3gpp100.rou.xml  3gpp100.sumocfg.xml  3gpp200.rou.xml  3gpp200.sumocfg.xml  3gpp300.rou.xml  3gpp300.sumocfg  3gpp400.rou.xml  3gpp400.sumocfg  3gpp400.sumocfg.xml  3gpp500.rou.xml  3gppTrafficLight.net.xml  6lane.add.xml  6lane.net.xml  6lane.poly.xml  6lane.sumocfg  6lane.sumocfg.xml  6lane.tls.xml  6lane600.rou.xml  block.poly.xml  manhattan.sumocfg  net.net.xml  test.add.xml  test.net.xml  test.rou.xml  test.sumocfg.xml  test1.rou.xml  threeLane.net.xml  threeLane.rou.xml  threeLane.sumocfg  trafficLight.add.xml
scenarios/myscena/: omnetpp.ini
scenarios/myscena2/: omnetpp.ini  services.xml
scenarios/simulte/: omnetpp.ini
(+258 files in other folders)
